# people-analytics-dwh-dbt

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/analyses/: executive_dashboard_queries.sql
dbt_project/macros/: hr_metrics.sql
dbt_project/models/marts/: _marts__models.yml  dim_departments.sql  dim_employees.sql  fct_absenteeism_monthly.sql  fct_headcount_monthly.sql  fct_internal_mobility.sql  fct_promotions_quarterly.sql  fct_recruiting_pipeline.sql  fct_training_adoption.sql  fct_turnover_monthly.sql
dbt_project/models/staging/: _stg__models.yml  _stg__sources.yml  stg_absences.sql  stg_employees.sql  stg_payroll.sql  stg_promotions.sql  stg_recruiting.sql  stg_surveys.sql  stg_training.sql
dbt_project/tests/: assert_absence_rate_bounded.sql  assert_hire_date_before_termination.sql  assert_turnover_rate_bounded.sql
docker/: Dockerfile
docs/: architecture.md  data_dictionary.md
notebooks/: 01_explore_marts.ipynb
src/: config.py  generate_data.py
tests/: conftest.py  test_config.py  test_data_generator.py  test_save_and_load.py
